Color see more button correctly in dark mode.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -99,6 +99,7 @@ html[mode="dark"] {
   border-radius: 15px;
   border-width: 1px;
   background: transparent;
+  color: var(--text-color);
 }
 
 .completion-button {
